# bnbagent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bnbagent  bnbagent.sh  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  salepitch.md
.github/workflows/: ci.yml
agent_mcp/: __init__.py  mcp_server.py
agents/: advisor.py  base.py  chat.py  providers.py  providers.yaml  reviewer.py  token_module.py
agents/_pro_defaults/: chat.md
agents/personas/: advisor.md  chat.md  reviewer.md  token_module.md
backtest/: __init__.py  fetch_history.py  metrics.py  replay.py
config/: allowlist.yaml  config.yaml  local.yaml.example  perps_venues.yaml  policy.schema.json  policy.yaml  policy.yaml.example  tokens.mainnet.yaml
connectors/: __init__.py  binance.py  bnb_sdk.py  cmc.py  data_source.py  ipfs.py  keystore.py  twak.py  x402.py
connectors/venues/: __init__.py  apollox.py  aster.py  base.py  binance_perp.py  killex.py  mux.py  paper_stub.py  registry.py
core/: __init__.py  balances.py  boot.py  config_paths.py  control.py  daily_trade_floor.py  dashboard_state.py  eligibility.py  logger.py  main.py  portfolio.py  risk.py  setup.py  tick.py  utils.py  version.py
dashboard/: __init__.py
dashboard/backend/: auth.py  main.py  metrics.py  stream.py
dashboard/frontend/: index.html
data/: cmc_mock.json  eligible_tokens.json
data/reports/: replay_bear.json  replay_bear_hourly.json  replay_bull.json  replay_bull_hourly.json  replay_chop.json  replay_chop_hourly.json  replay_compare.json
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  MCP.md  PERSONAS.md  POLICY_CHANGELOG.md  SECURITY.md  SKILLS.md  TOKEN_MODULE.md  agents.md  architecture.md  audit-2026-06-05.md  compliance.md  demo-script.md  install.md  judge-elevator-pitch.md  onchain.md  operations.md  policy.md  register-step-by-step.md  setup-wizard.md  strategy.md  submission-v2.1.7.md  submission.md  twitter-thread.md  venue_implement_me.md  x402.md
docs/internal/: FOLLOWUP-post-wizard.md
identity/: __init__.py  metadata.json  register.py
infra/docker/: Dockerfile.agent
infra/systemd/: bnbagent-dashboard-dev.service  bnbagent-dev.service  bnbagent.service
jobs/: __init__.py  finalize_window.py  open_jobs.py  submit_sleeve.py
policy/: __init__.py  policy_sign.py  policy_verify.py  policy_version.py
scripts/: competition_register.py  finalize_window.sh  first_run.sh  force_fire_floor.py  manual_swap.py  mcp_serve.sh  mcp_serve_sse.sh  open_window.sh  publish.sh  register_agent.sh  replay_week.sh  run_both_regimes.py  sign_policy.sh  start_agent.sh  start_dashboard.sh
skills/: __init__.py  base.py  registry.py
skills/data/: __init__.py  cmc_global_filter.py  glassnode_onchain.py  x_sentiment.py
skills/notification/: __init__.py  farcaster_post.py  telegram_alert.py  (+1 more)
strategies/: __init__.py  sleeve_a_carry.py  sleeve_b_momentum.py  sleeve_c_meanrev.py
tests/: __init__.py  conftest.py  test_meta.py
(+102 files in other folders)
