[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnbagent"
version = "1.0.0"
description = "BNB Agent — Autonomous three-sleeve BSC trading agent for the BNB HACK hackathon"
authors = [{name = "BNB Agent Team"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "web3>=7.0",
    "eth-account>=0.13",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "numpy>=1.26",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]
twak = ["@trustwallet/cli"]  # npm-managed, see package.json

[project.scripts]
bnbagent = "core.main:main"
bnbagent-replay = "backtest.replay:main"
bnbagent-dashboard = "dashboard.backend.main:run"

[tool.setuptools]
packages = [
    "core", "connectors", "strategies", "policy",
    "identity", "jobs", "backtest", "dashboard",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
