[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnbagent"
version = "2.1.7"
description = "BNB Agent — Autonomous three-sleeve BSC trading agent for the BNB HACK hackathon (by Blaze)"
authors = [{name = "Blaze"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "web3>=7.0",
    "eth-account>=0.13",
    "pycryptodome>=3.18",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "numpy>=1.26",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-mock>=3.12",
    "mcp>=1.0",          # MCP server tests (tests/integration/test_mcp.py)
    "httpx>=0.27",       # required by mcp + TestClient
    "fastapi>=0.110",    # for dashboard endpoint tests
]
# Note: the Trust Wallet CLI is an npm package and is installed via
# `npm install` (see package.json). It cannot live in [project.optional-dependencies]
# because npm names like "@trustwallet/cli" are not valid PEP508 pip specs,
# and including one here makes the whole pyproject.toml fail to parse.

[project.scripts]
bnbagent = "core.main:main"
bnbagent-replay = "backtest.replay:main"
bnbagent-dashboard = "dashboard.backend.main:run"

[tool.setuptools]
packages = [
    "core", "connectors", "strategies", "policy",
    "identity", "jobs", "backtest", "dashboard",
    "agents", "agent_mcp", "skills",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
